# ChangeLog for games-fps/soldieroffortune
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/soldieroffortune/ChangeLog,v 1.7 2004/08/07 21:08:59 slarti Exp $

  07 Aug 2004; Tom Martin <slarti@gentoo.org> soldieroffortune-1.06a.ebuild:
  Typo in DESCRIPTION: mercinary -> mercenary. Bug 59717.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  soldieroffortune-1.06a.ebuild:
  virtual/glibc -> virtual/libc

  12 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  soldieroffortune-1.06a.ebuild:
  Removing redundant inherit eutils and adding IUSE.

  27 Feb 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  soldieroffortune-1.06a.ebuild:
  Updating to new cdrom interface and cleaning up ebuild.

*soldieroffortune-1.06a (27 Jul 2003)

  27 Jul 2003; Chris Gianelloni <wolf31o2@gentoo.org>
  soldieroffortune-1.06a.ebuild, files/sof:
  Initial import.  Ebuild by me.
