@@ -1,5 +1,5 @@
-MD5 e2e1d947ddb8b7974b6fb0ba3e3527b3 soldieroffortune-1.06a.ebuild 1990
-MD5 9840a07c7cfb24bf38bd61b3b57b2904 ChangeLog 942
+MD5 76a2880cec66d8b07e15cb23f1221169 soldieroffortune-1.06a.ebuild 1962
+MD5 f135a590fda822e43fa341859cca31a1 ChangeLog 1114
 MD5 e055f0cedd35a8ca9240ec727e52acf2 metadata.xml 968
 MD5 58f9b2124d72bc96aa6f6867cf4e9e61 files/sof 38
 MD5 428261b94ec1355a846a1797056c894c files/digest-soldieroffortune-1.06a 70
