@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/soldieroffortune/soldieroffortune-1.06a.ebuild,v 1.8 2004/08/07 21:08:59 slarti Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/soldieroffortune/soldieroffortune-1.06a.ebuild,v 1.9 2005/03/07 13:55:38 wolf31o2 Exp $
 
 inherit games
 
@@ -37,9 +37,9 @@ src_unpack() {
 src_install() {
 	dodir ${dir}
 	einfo "Copying files... this may take a while..."
-	exeinto /opt/soldieroffortune
+	exeinto ${dir}
 	doexe ${CDROM_ROOT}/bin/x86/glibc-2.1/sof
-	insinto /opt/soldieroffortune
+	insinto ${dir}
 
 	cp ${CDROM_ROOT}/{README,kver.pub,sof.xpm} ${Ddir}
 
